# conda-which

./: README.md  conda_which.py  pyproject.toml  test.py  which_package.py
recipe/: meta.yaml
