[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "conda-which"
version = "0.1"
description = "Which environments have <package> installed?"
requires-python = ">=3.7"
dependencies = ["conda", "prettytable"]

[project.entry-points.conda]
which = "conda_which"

[tool.setuptools]
py-modules = ["conda_which"]